verylinkedin/mypost/docker/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbitmq
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbitmq
  strategy: { }
  template:
    metadata:
      annotations:
        kompose.cmd: kompose.exe convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/dev-net: "true"
        io.kompose.service: rabbitmq
    spec:
      containers:
        - env:
            - name: RABBITMQ_DEFAULT_PASS
              value: guest
            - name: RABBITMQ_DEFAULT_USER
              value: guest
            - name: RABBITMQ_DEFAULT_VHOST
              value: /
            - name: RABBITMQ_ERLANG_COOKIE
              value: whatever
          image: rabbitmq:3-management-alpine
          name: rabbitmq
          ports:
            - containerPort: 15672
            - containerPort: 5672
          resources: { }
      restartPolicy: Always
status: { }
