verylinkedin/mypost/docker/mongo-net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: mongo-net
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/mongo-net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/mongo-net: "true"
